--- a/app/src/main/res/layout/pizza_item.xml
+++ b/app/src/main/res/layout/pizza_item.xml
@@ -1,34 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Permite listar elementos dentro estableciendo un orden definido por el atributo orientation (vertical, horizontal) -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-<FrameLayout
+    <!-- Permite listar elementos dentro manejando la disposicion dentro por la gravedad o peso de los elementos (permite solapamiento) -->
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+    <!-- Muestra una imagen -->
     <ImageView
+        android:id="@+id/foto"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:src="@drawable/jamon"
         android:scaleType="centerCrop"/>
+    <!-- Conocido como label comunmente, muestra texto -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:layout_marginTop="16dp"
         android:layout_marginRight="8dp"
-        android:text="$20"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@android:color/white"
-        android:id="@+id/textView"/>
+        android:id="@+id/precio"/>
 </FrameLayout>
     <TextView
+        android:id="@+id/nombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Jamon"
         android:textSize="30sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
