--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/pizza_container"
+<!-- El ListView contenedor de todos los items de pizza que se visualizaran en el menu -->
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pizza_lv"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:orientation="vertical">
-</LinearLayout>
+    android:divider="@android:color/transparent"
+    android:dividerHeight="16.0sp">
+</ListView>
